--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		
+		<div class="container">
+			
+		</div>
 	</body>
 </html>
