--- a/index.html
+++ b/index.html
@@ -9,44 +9,144 @@
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
-	<body>
-		<div class="container">
-			<div class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<img src="images/15.jpg" style="width:100px; height:100px ">
-						<a  href="#" style="color: yellow">HAPPY BIRTHDAY</a>
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar-content">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						</button>
-						<div>
-							<div id="navbar" class="navbar-collapse collapse">
-		          			<ul class="nav navbar-nav navbar-right nav01">
-		          				<li><a href="#"data-toggle="modal" data-target="#myModal"><span ></span> Gift</a>
-				        			<div class="modal fade" id="myModal">
-										<div class="modal-dialog">
-											<div class="modal-content">
-												<!-- Modal Header -->
-												<div class="modal-header">
-													<button type="button" class="close" data-dismiss="modal">&times;</button>
-													<h4 class="modal-title">Gift</h4>
-												</div>
-												<!-- Modal Body -->
-												<div class="modal-body">
-													<img id="gift" onclick="opengift()" src="images/.jpg">
-													<p> Click : have a big gift ^_^ </p>
-												</div>
-								</li>
-						</div>
+	<body style="background-color:rgba(0,0,0,0.81)">
+		<embed src="audio/1.mp3" autostart="true" loop="true" witdth="0" height="0">
+		<div class="container container-header">
+	        <div class="navbar ">
+		        <div class="row">
+		          <div class="navbar-header col-md-5">
+		          	<div id="logo">
+		          		<a href="#"> <img src="images/15.jpg" style="width:100px; height:100px ">
+			        	<a  href="#" style="color: yellow">HAPPY BIRTHDAY</a>
+			        </div>
+		            <button type="button" class="navbar-toggle collapsed col-md-7" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		              <span class="sr-only">Toggle navigation</span>
+		              <span class="icon-bar"></span>
+		              <span class="icon-bar"></span>
+		              <span class="icon-bar"></span>
+		            </button>        
+			        </div>
+					<div>
+						<div id="navbar" class="navbar-collapse collapse">
+	          			<ul class="nav navbar-nav navbar-right nav01 nav-pills">
+	          				<li><a href="#"data-toggle="modal" data-target="#myModal"><span ></span> Gift</a>
+			        			<div class="modal fade" id="myModal">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<!-- Modal Header -->
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal">&times;</button>
+												<h4 class="modal-title">Gift</h4>
+											</div>
+											<!-- Modal Body -->
+											<div class="modal-body">
+												<img id="gift" onclick="opengift()" src="images/20.jpg">
+												<p> Click : have a big gift ^_^ </p>
+											</div>
+							</li>
+							<li><a href="#">Have nice day :D </a></li>
+					</div>	
 					</div>
 			  	</div>
 			</div>
 			<div>
-				<h1>Click to burn candle</h1>
+				<h4 style="color:#15bf31 ">Click to burn candle</h4>
 				<img id="light" onclick="changeimg()" src="images/14.jpg">
 			</div>
+			<div>
+				<p> Chúc mưng sinh nhật thầy - Doraemon :p </p>
+				<div id="bestCarsCarousel" class="carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#bestCarsCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#bestCarsCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel" data-slide-to="3"></li>
+						<li data-target="#myCarousel" data-slide-to="4"></li>
+						<li data-target="#myCarousel" data-slide-to="6"></li>
+						<li data-target="#myCarousel" data-slide-to="7"></li>
+					</ol>
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="images/1.jpg" width="900" height="30" class="img-responsive">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>RoyneyBada</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/2.jpg" width="900" height="30" class="img-responsive-center-block">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/9.jpg"width="900" height="30" class="img-responsive">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/5.jpg"width="900" height="30" class="img-responsive">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/11.jpg"width="900" height="30" class="img-responsive">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/8.jpg"width="900" height="30" class="img-responsive" >
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+						<div class="item">
+							<img src="images/6.jpg"width="900" height="30" class="img-responsive">
+							<blockquote>
+								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate, metus tempus malesuada lacinia, lorem sapien</p>
+								<p></p>
+								<footer>BuckBud</footer>
+							</blockquote>
+						</div>
+					</div>
+					<!-- Controls -->
+					<a class="left carousel-control" href="#bestCarsCarousel" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+					</a>
+					<a class="right carousel-control" href="#bestCarsCarousel" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+					</a>
+				</div>
+			</div>
+			<div>
+				<img src="images/16.gif">	
+			</div>
+			<div>
+				<button data-toggle="modal" data-target="#myModal" > Happy brithday to ciu-te teacher (26 years old) </button>
+			</div>	
 
 		</div>
 	<script>
