--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- <link href="bootstrap-container/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+</head>
 	</head>
 	<body style="background-color:rgba(0,0,0,0.81)">
-		<embed src="audio/1.mp3" autostart="true" loop="true" witdth="0" height="0">
+		<!-- <embed src="audio/1.mp3" autostart="true" loop="true" witdth="0" height="0"> -->
 		<div class="container container-header">
 	        <div class="navbar ">
 		        <div class="row">
 		          <div class="navbar-header col-md-5">
 		          	<div id="logo">
-		          		<a href="#"> <img src="images/15.jpg" style="width:100px; height:100px ">
+		          		<a href="#"> <img class="img-circle" src="images/15.jpg" style="width:100px; height:100px ">
 			        	<a  href="#" style="color: yellow">HAPPY BIRTHDAY</a>
 			        </div>
 		            <button type="button" class="navbar-toggle collapsed col-md-7" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -50,7 +54,7 @@
 			  	</div>
 			</div>
 			<div>
-				<h4 style="color:#15bf31 ">Click to burn candle</h4>
+				<h4 style="color:#15bf31 " align="middle" >Click to burn candle</h4>
 				<img id="light" onclick="changeimg()" src="images/14.jpg">
 			</div>
 			<div>
