--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		        <div class="row">
 		          <div class="navbar-header col-md-5">
 		          	<div id="logo">
-		          		<a href="#"> <img class="img-circle" src="images/15.jpg" style="width:100px; height:100px ">
-			        	<a  href="#" style="color: yellow">HAPPY BIRTHDAY</a>
+		          		<a id="logo2"href="#"> <img class="img-circle" src="images/15.jpg" style="width:100px; height:100px ">
+			        	<a id="logo1" href="#" >My Teacher</a>
 			        </div>
 		            <button type="button" class="navbar-toggle collapsed col-md-7" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 		              <span class="sr-only">Toggle navigation</span>
@@ -53,14 +53,9 @@
 					</div>
 			  	</div>
 			</div>
-			<div>
-<<<<<<< HEAD
+			<div id="burn">
 				<h4 style="color:#15bf31 " align="middle" >Click to burn candle</h4>
 				<img id="light" onclick="changeimg()" src="images/14.jpg">
-=======
-				<h4 style="color:#15bf31 ">Click to burn candle</h4>
-				<img id="light" onclick="changeimg()" src="images/14.jpg" class="img-center">
->>>>>>> 7dff129b0168bc8b5e1d933d16704cdf2581440c
 			</div>
 			<div>
 				<p> Chúc mưng sinh nhật thầy - Doraemon :p </p>
@@ -120,7 +115,7 @@
 			<div>
 				<button data-toggle="modal" data-target="#myModal" > Happy brithday to ciu-te teacher (26 years old) </button>
 			</div>	
-			<img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")">
+			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
 			<!-- <img src="images/1.jpg" id="pic1"onclick="chageIcon(document.getElementById("pic1"),"images/2.jpg");"> -->
 		</div>
 	<script>
