--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
 		<title>HAPPY BIRTHDAY </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,7 @@
 		<!-- <link href="bootstrap-container/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/styles.css"> -->
 </head>
-	</head>
-	<body style="background-color:rgba(0,0,0,0.81)">
+<body style="background-color:rgba(0,0,0,0.81)">
 		<!-- <embed src="audio/1.mp3" autostart="true" loop="true" witdth="0" height="0"> -->
 		<div class="container container-header">
 	        <div class="navbar ">
@@ -53,17 +52,12 @@
 					</div>
 			  	</div>
 			</div>
-<<<<<<< HEAD
-			<div id="burn">
-				<h4 style="color:#15bf31 " align="middle" >Click to burn candle</h4>
-=======
 			<div>
-				<h4 style="color:#15bf31 " align="middle">Click to burn candle</h4>
->>>>>>> 4328fd22c977b093d3d5085fb523273ce7e998a0
+				<h4 style="color:#15bf31 " align="middle">Click to burn candle :D </h4>
 				<img id="light" onclick="changeimg()" src="images/14.jpg">
 			</div>
-			<div>
-				<p> Chúc mưng sinh nhật thầy - Doraemon :p </p>
+			<div id="carouesel01">
+				<p> Chúc mừng sinh nhật thầy - Doraemon :p </p>
 				<div id="bestCarsCarousel" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
 					<ol class="carousel-indicators">
@@ -114,10 +108,12 @@
 					</a>
 				</div>
 			</div>
-			<div>
-				<img src="images/16.gif" class="img-responsive img-center">	
+			<div id="css301">
+				<div id="css3">
+					<img src="images/16.gif" class="img-responsive img-center">	
+				</div>
 			</div>
-			<div>
+			<div id="footer01">
 				<button data-toggle="modal" data-target="#myModal" > Happy brithday to ciu-te teacher (26 years old) </button>
 			</div>	
 			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
@@ -153,5 +149,5 @@
 	    // }
 	}
 	</script>
-	</body>
+</body>
 </html>
