--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 			</div>
 			<div id="footer01">
 				<button data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 10px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
+				<h2 class="p2">Chúc thầy lun mạnh khỏe và hạnh phúc :D</h2>
 			</div>			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
 			<!-- <img src="images/1.jpg" id="pic1"onclick="chageIcon(document.getElementById("pic1"),"images/2.jpg");"> -->
 		</div>
