--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		          <div class="navbar-header col-md-5">
 		          	<div id="logo">
 		          		<a id="logo2"href="#"> <img class="img-circle" src="images/15.jpg" style="width:100px; height:100px ">
-			        	<a id="logo1" href="#" style="text-decoration:none">My Teacher</a>
+			        	<a id="logo1" href="#" >My Teacher</a>
 			        </div>
 		            <button type="button" class="navbar-toggle collapsed col-md-7" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 		              <span class="sr-only">Toggle navigation</span>
@@ -121,11 +121,12 @@
 		</div>
 	<script>
 		function opengift() {
-			var i;
-			var img=document.getElementById('gift');
-			for(i=0;i<=3;i++){
-
-			}
+			 var image = document.getElementById('gift');
+		    if (image.src.match("21")) {
+		        image.src = "images/20.jpg";
+		    } else {
+		        image.src = "images/21.jpg";
+		    }
 		}
 		function changeimg() {
 	    var image = document.getElementById('light');
