--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</div>
 						<div class="item">
 							<img src="images/11.jpg"width="900" height="30" class="img-responsive img-center">
-							<p class="p1">Bụng chưa phát tướng rùi thầy ơi  :D</p>
+							<p class="p1">Bụng chưa phát tướng rùi thầy ơi  :D =))))) </p>
 						</div>
 						<div class="item">
 							<img src="images/8.jpg"width="900" height="30" class="img-responsive img-center" >
@@ -114,9 +114,12 @@
 				</div>
 			</div>
 			<div id="footer01">
-				<button data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 10px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
+				<button id="footer02" data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 50px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
 			</div>			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
 			<!-- <img src="images/1.jpg" id="pic1"onclick="chageIcon(document.getElementById("pic1"),"images/2.jpg");"> -->
+			<div id="last">
+				<p id="borderimg">Made by : your cute student ( rảnh rỗi ko học bài á thầy :p ) </p>
+			</div>
 		</div>
 	<script>
 		function opengift() {
