--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 			<div>
 				<h4 style="color:#15bf31 " align="middle">Click to burn candle :D </h4>
-				<img id="light" onclick="changeimg()" src="images/14.jpg">
+				<img id="light" onclick="changeimg()" src="images/14.jpg" class="img-responsive">
 			</div>
 			<div id="carouesel01">
 				<h4 class="doraemon"> Chúc mừng sinh nhật thầy - Doraemon :p </h4>
@@ -114,12 +114,9 @@
 				</div>
 			</div>
 			<div id="footer01">
-<<<<<<< HEAD
 				<button id="footer02" data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 50px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
-=======
-				<button data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 10px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
+				<!-- <button data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 10px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button> -->
 				<h2 class="p2">Chúc thầy lun mạnh khỏe và hạnh phúc :D</h2>
->>>>>>> 8fa9cf5a1a2106dee9cd73f3ddfdfd1b863fdd72
 			</div>			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
 			<!-- <img src="images/1.jpg" id="pic1"onclick="chageIcon(document.getElementById("pic1"),"images/2.jpg");"> -->
 			<div id="last">
