--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				</div>
 			</div>
 			<div id="footer01">
-				<button id="footer02" data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 50px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
+				<button id="footer02" data-toggle="modal" data-target="#myModal" class="btn btn-info btn-block" style="padding: 10px 50px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button>
 				<!-- <button data-toggle="modal" data-target="#myModal" class="btn btn-info" style="padding: 10px 10px; margin-bottom: 20px;"> Happy brithday to ciu-te teacher (26 years old) </button> -->
 				<h2 class="p2">Chúc thầy lun mạnh khỏe và hạnh phúc :D</h2>
 			</div>			<!-- <img src="images/1.jpg" id="pic1" onclick="changeimg1("images/2.jpg")"> -->
@@ -131,7 +131,9 @@
 		    } else {
 		        image.src = "images/21.jpg";
 		    }
-		    document.getElementById('click').innerHTML = "nhậu thầy ơi";
+		    document.getElementById('click').innerHTML= "nhậu thầy ơi";
+		    document.getElementById('click').style.fontSize= "xx-large";
+		    document.getElementById('click').style.color = "yellow";
 		}
 		function changeimg() {
 	    var image = document.getElementById('light');
