--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 											<div class="modal-body">
 												<img id="gift" onclick="opengift()" src="images/20.jpg">
 												<p id="click"> Click : have a big gift ^_^ </p>
+												<a href="#" onclick = "window.document.images/20.jpg.src = 'images/21.jpg'";></a>
 											</div>
 							</li>
 							<li><a href="#">Have nice day :D </a></li>
@@ -135,6 +136,10 @@
 		    document.getElementById('click').style.fontSize= "xx-large";
 		    document.getElementById('click').style.color = "yellow";
 		}
+		// function opengift () {
+		// 	// body...
+		// 	onclick = "window.document.image/20.jpg.src = 'image/21.jpg'";
+		// }
 		function changeimg() {
 	    var image = document.getElementById('light');
 	    if (image.src.match("13")) {
