--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 											<!-- Modal Header -->
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal">&times;</button>
-												<h4 class="modal-title">Gift</h4>
+												<h4 class="modal-title p1">Gift</h4>
 											</div>
 											<!-- Modal Body -->
-											<div class="modal-body">
+											<div class="modal-body" style="background-color: rgba(33,47,31,0.85)">
 												<img id="gift" onclick="opengift()" src="images/20.jpg">
-												<p id="click"> Click : have a big gift ^_^ </p>
+												<p id="click" class="p2"> Click : have a big gift ^_^ </p>
 												<a href="#" onclick = "window.document.images/20.jpg.src = 'images/21.jpg'";></a>
 											</div>
 							</li>
